[package]
name = "crcgrab"
version = "0.1.0"
authors = ["Gbps <gbps@ctf.re>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = [
    "winerror",
    "errhandlingapi",
    "libloaderapi",
    "psapi",
    "processthreadsapi",
    "winbase",
    "minwindef",
    "winnt",
    "handleapi",
    "memoryapi",
    "tlhelp32"
]

[dependencies]
anyhow = '1.0'
widestring = "0.4"
num-traits = "0.2"
num-derive = "0.3"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
pretty_env_logger = "0.4.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
app_dirs = "1.2"